# temporal-webhook-forwarder

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/: Dockerfile  app.py  requirements.txt
src/conf/: config.yaml
src/conf/webhooks/: shopify.yaml
src/temporal_forwarder/: __init__.py  codec.py  forwarder.py  healthchecks.py  plugins.py  temporal_client.py  webhook.py
src/temporal_forwarder/webhooks/: generic.py  shopify.py
tests/: conftest.py
tests/functional/: test_app.py
tests/unit/: test_generic.py  test_shopify.py
